this is second commit

--- a/src/views/options.html
+++ b/src/views/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="options">
 	<title>
-		freelancer jobs feed tracker
+		upwork jobs feed tracker
 	</title>
 	<head>
 		<link rel="stylesheet" type="text/css" href="options.css">
@@ -47,9 +47,9 @@
 				</div>
 				<div class="tlight tsmall meta">
 					Developed by
-					<a href="https://github.com/neeilya/freelancer-jobs-feed-tracker"
+					<a href="https://github.com/codingexpert1995/freelancer-jobs-feed-tracker"
 						target="_blank">
-						@neeilya
+						@codingexpert1995
 					</a>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 					v-bind:class="{ unread: job.isRead === false }"
 					class="job">
 					<h3 class="job-title">
-						<a href="https://www.freelancer.com/jobs/_{{ job.ciphertext }}"
+						<a href="https://www.upwork.com/jobs/_{{ job.ciphertext }}"
 							target="_blank">
 							{{{ job.title }}}
 						</a>
@@ -152,12 +152,12 @@
 						<br>
 						extension and it needs some time to load data
 						<br>
-						or you have not configured your jobs feed on freelancer.
+						or you have not configured your jobs feed on upwork.
 						<br>
 						<br>
 						In the latter case please refer to
 						<a target="_blank"
-							href="https://github.com/neeilya/freelancer-jobs-feed-tracker#warning-to-freelancers">
+							href="https://github.com/codingexpert1995/freelancer-jobs-feed-tracker#warning-to-upworks">
 							this instruction.
 						</a>
 					</p>
