--- a/src/views/popup.html
+++ b/src/views/popup.html
@@ -41,8 +41,8 @@
 					:(
 					<br>
 					Please
-					<a href="https://www.freelancer.com/ab/account-security/login">login</a>
-					on freelancer website
+					<a href="https://www.upwork.com/ab/account-security/login">login</a>
+					on upwork website
 				</template>
 			</div>
 		</div>
